<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="buttonAC">AC</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonPercentage">%</string>
    <string name="buttonDivide">/</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonTimes">X</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonMinus">-</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonPlus">+</string>
    <string name="buttonZero">0</string>
    <string name="buttonDecimalPlace">.</string>
    <string name="buttonEquals">=</string>

</resources>
