<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Calculator">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:ems="10"
        android:id="@+id/numberEnteredText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/numberEnteredText"
        android:layout_alignLeft="@+id/numberEnteredText"
        android:layout_alignStart="@+id/numberEnteredText">

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonAC"
            android:id="@+id/buttonAC"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonPlusMinus"
            android:id="@+id/buttonPlusMinus"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonPercentage"
            android:id="@+id/buttonPercentage"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonDivide"
            android:id="@+id/buttonDivide"
            android:layout_row="0"
            android:layout_column="3" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonSeven"
            android:id="@+id/buttonSeven"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonEight"
            android:id="@+id/buttonEight"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonNine"
            android:id="@+id/buttonNine"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonTimes"
            android:id="@+id/buttonTimes"
            android:layout_row="1"
            android:layout_column="3" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonFour"
            android:id="@+id/buttonFour"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonFive"
            android:id="@+id/buttonFive"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonSix"
            android:id="@+id/buttonSix"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonMinus"
            android:id="@+id/buttonMinus"
            android:layout_row="2"
            android:layout_column="3" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonOne"
            android:id="@+id/buttonOne"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonTwo"
            android:id="@+id/buttonTwo"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonThree"
            android:id="@+id/buttonThree"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonPlus"
            android:id="@+id/buttonPlus"
            android:layout_row="3"
            android:layout_column="3" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonZero"
            android:id="@+id/buttonZero"
            android:layout_row="4"
            android:layout_column="1" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonDecimalPlace"
            android:id="@+id/buttonDecimalPlace"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/buttonEquals"
            android:id="@+id/buttonEquals"
            android:layout_row="4"
            android:layout_column="3" />

    </GridLayout>

</RelativeLayout>
